# gobo

./: .gitignore  AGENTS.md  Cargo.toml  README.md  architecture.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: pi.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
hooks/: pre-commit
scripts/: release.sh
specs/: review-report-glm.md  review-report-qwen.md
specs/001-shell-text-editor/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-shell-text-editor/checklists/: requirements.md
specs/001-shell-text-editor/contracts/: cli-contract.md
specs/002-fix-unsaved-popup/: analysis-report.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fix-unsaved-popup/checklists/: requirements.md
specs/002-fix-unsaved-popup/contracts/: quit-confirmation-popup.md
specs/003-enter-newline-edit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-enter-newline-edit/checklists/: requirements.md
specs/003-enter-newline-edit/contracts/: editor-command-enter.md
specs/004-visible-search-popup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-filename-in-footer/: plan.md  review.md  spec.md
specs/006-undo-redo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-text-selection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-fix-trailing-newline-cursor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-clipboard-cut-copy-paste/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-tab-auto-indent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-help-dialog/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: app.rs  cli.rs  document.rs  lib.rs  main.rs
src/editor/: buffer.rs  clipboard.rs  cursor.rs  history.rs  indent.rs  input.rs  mod.rs  render.rs  search.rs  status.rs
tests/integration/: clipboard_features.rs  enter_newline.rs  help_dialog.rs  open_and_save.rs  readonly_and_conflict.rs  search_and_resize.rs  tab_auto_indent.rs  text_selection.rs  trailing_newline_insert.rs  undo_redo.rs  unsaved_guards.rs
tests/unit/: buffer.rs  clipboard.rs  cursor.rs  help_dialog.rs  history.rs  indent.rs  render.rs  search.rs
(+15 files in other folders)
