[package]
name = "gobo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
ropey = "1.6"
unicode-segmentation = "1.12"
unicode-width = "0.2"
arboard = "3"

[dev-dependencies]
tempfile = "3.20"
arboard = "3"

[[test]]
name = "integration_open_and_save"
path = "tests/integration/open_and_save.rs"

[[test]]
name = "integration_unsaved_guards"
path = "tests/integration/unsaved_guards.rs"

[[test]]
name = "integration_readonly_and_conflict"
path = "tests/integration/readonly_and_conflict.rs"

[[test]]
name = "integration_search_and_resize"
path = "tests/integration/search_and_resize.rs"

[[test]]
name = "integration_enter_newline"
path = "tests/integration/enter_newline.rs"

[[test]]
name = "integration_undo_redo"
path = "tests/integration/undo_redo.rs"

[[test]]
name = "unit_buffer"
path = "tests/unit/buffer.rs"

[[test]]
name = "unit_cursor"
path = "tests/unit/cursor.rs"

[[test]]
name = "unit_search"
path = "tests/unit/search.rs"

[[test]]
name = "unit_render"
path = "tests/unit/render.rs"

[[test]]
name = "unit_history"
path = "tests/unit/history.rs"

[[test]]
name = "integration_text_selection"
path = "tests/integration/text_selection.rs"

[[test]]
name = "integration_trailing_newline_insert"
path = "tests/integration/trailing_newline_insert.rs"

[[test]]
name = "unit_clipboard"
path = "tests/unit/clipboard.rs"

[[test]]
name = "integration_clipboard_features"
path = "tests/integration/clipboard_features.rs"

[[test]]
name = "integration_tab_auto_indent"
path = "tests/integration/tab_auto_indent.rs"

[[test]]
name = "unit_indent"
path = "tests/unit/indent.rs"
